added code for returning Packet as part of Message (untested).

--- a/mapConnections.cabal
+++ b/mapConnections.cabal
@@ -24,6 +24,7 @@ executable mapConnections
                        pcap,
                        network-uri,
                        http-conduit,
+                       data-hash,
                        haste-compiler
   -- hs-source-dirs:      
   default-language:    Haskell2010
